--- a/mona/core/scheme/Makefile.mona_gc.inc
+++ b/mona/core/scheme/Makefile.mona_gc.inc
@@ -1,3 +1,5 @@
 GC_CFLAGS  = -DMONASH_DONT_FREE_MEMORY -DUSE_MONA_GC #-DGC_TRACE
 GC_LDFLAGS = 
 GC_SOURCES = gc/GCRecord.cpp gc/gc.cpp
+GC_OBJECTS = $(GC_SOURCES:.cpp=.o)
+
