--- a/mona/core/scheme/Makefile.onig.inc
+++ b/mona/core/scheme/Makefile.onig.inc
@@ -1,45 +1,45 @@
 ONIG_DIR = ./onig/onig-5.7.0
 
 ONIG_SOURCES = \
-	onig/onig-5.7.0/regcomp.c \
-	onig/onig-5.7.0/regenc.c \
-	onig/onig-5.7.0/regerror.c \
-	onig/onig-5.7.0/regexec.c \
-	onig/onig-5.7.0/regext.c \
-	onig/onig-5.7.0/reggnu.c \
-	onig/onig-5.7.0/regparse.c \
-	onig/onig-5.7.0/regposerr.c \
-	onig/onig-5.7.0/regposix.c \
-	onig/onig-5.7.0/regsyntax.c \
-	onig/onig-5.7.0/regtrav.c \
-	onig/onig-5.7.0/regversion.c \
-	onig/onig-5.7.0/st.c \
-	onig/onig-5.7.0/enc/ascii.c \
-	onig/onig-5.7.0/enc/big5.c \
-	onig/onig-5.7.0/enc/cp1251.c \
-	onig/onig-5.7.0/enc/euc_jp.c \
-	onig/onig-5.7.0/enc/euc_kr.c \
-	onig/onig-5.7.0/enc/euc_tw.c \
-	onig/onig-5.7.0/enc/gb18030.c \
-	onig/onig-5.7.0/enc/iso8859_1.c \
-	onig/onig-5.7.0/enc/iso8859_10.c \
-	onig/onig-5.7.0/enc/iso8859_11.c \
-	onig/onig-5.7.0/enc/iso8859_13.c \
-	onig/onig-5.7.0/enc/iso8859_14.c \
-	onig/onig-5.7.0/enc/iso8859_15.c \
-	onig/onig-5.7.0/enc/iso8859_16.c \
-	onig/onig-5.7.0/enc/iso8859_2.c \
-	onig/onig-5.7.0/enc/iso8859_3.c \
-	onig/onig-5.7.0/enc/iso8859_4.c \
-	onig/onig-5.7.0/enc/iso8859_5.c \
-	onig/onig-5.7.0/enc/iso8859_6.c \
-	onig/onig-5.7.0/enc/iso8859_7.c \
-	onig/onig-5.7.0/enc/iso8859_8.c \
-	onig/onig-5.7.0/enc/iso8859_9.c \
-	onig/onig-5.7.0/enc/sjis.c \
-	onig/onig-5.7.0/enc/unicode.c \
-	onig/onig-5.7.0/enc/utf16_be.c \
-	onig/onig-5.7.0/enc/utf16_le.c \
-	onig/onig-5.7.0/enc/utf32_be.c \
-	onig/onig-5.7.0/enc/utf32_le.c \
-	onig/onig-5.7.0/enc/utf8.c
+	$(ONIG_DIR)/regcomp.c \
+	$(ONIG_DIR)/regenc.c \
+	$(ONIG_DIR)/regerror.c \
+	$(ONIG_DIR)/regexec.c \
+	$(ONIG_DIR)/regext.c \
+	$(ONIG_DIR)/reggnu.c \
+	$(ONIG_DIR)/regparse.c \
+	$(ONIG_DIR)/regposerr.c \
+	$(ONIG_DIR)/regposix.c \
+	$(ONIG_DIR)/regsyntax.c \
+	$(ONIG_DIR)/regtrav.c \
+	$(ONIG_DIR)/regversion.c \
+	$(ONIG_DIR)/st.c \
+	$(ONIG_DIR)/enc/ascii.c \
+	$(ONIG_DIR)/enc/big5.c \
+	$(ONIG_DIR)/enc/cp1251.c \
+	$(ONIG_DIR)/enc/euc_jp.c \
+	$(ONIG_DIR)/enc/euc_kr.c \
+	$(ONIG_DIR)/enc/euc_tw.c \
+	$(ONIG_DIR)/enc/gb18030.c \
+	$(ONIG_DIR)/enc/iso8859_1.c \
+	$(ONIG_DIR)/enc/iso8859_10.c \
+	$(ONIG_DIR)/enc/iso8859_11.c \
+	$(ONIG_DIR)/enc/iso8859_13.c \
+	$(ONIG_DIR)/enc/iso8859_14.c \
+	$(ONIG_DIR)/enc/iso8859_15.c \
+	$(ONIG_DIR)/enc/iso8859_16.c \
+	$(ONIG_DIR)/enc/iso8859_2.c \
+	$(ONIG_DIR)/enc/iso8859_3.c \
+	$(ONIG_DIR)/enc/iso8859_4.c \
+	$(ONIG_DIR)/enc/iso8859_5.c \
+	$(ONIG_DIR)/enc/iso8859_6.c \
+	$(ONIG_DIR)/enc/iso8859_7.c \
+	$(ONIG_DIR)/enc/iso8859_8.c \
+	$(ONIG_DIR)/enc/iso8859_9.c \
+	$(ONIG_DIR)/enc/sjis.c \
+	$(ONIG_DIR)/enc/unicode.c \
+	$(ONIG_DIR)/enc/utf16_be.c \
+	$(ONIG_DIR)/enc/utf16_le.c \
+	$(ONIG_DIR)/enc/utf32_be.c \
+	$(ONIG_DIR)/enc/utf32_le.c \
+	$(ONIG_DIR)/enc/utf8.c
