--- a/mona/core/scheme/Makefile.boehm_gc.inc
+++ b/mona/core/scheme/Makefile.boehm_gc.inc
@@ -11,10 +11,11 @@ BOEHM_GC_CFLAGS = -DPACKAGE_NAME=\"gc\"    \
 -DALL_INTERIOR_POINTERS=1                  \
 -DATOMIC_UNCOLLECTABLE=1                   \
 -DNO_CLOCK                                 \
+-DGC_PRINT_STATS                           \
 -UMSWIN32                                  
 
 BOEHM_GC_DIR  = ./BoehmGC/gc-7.0
-GC_CFLAGS     = $(BOEHM_GC_CFLAGS) -DMONASH_DONT_FREE_MEMORY -I $(BOEHM_GC_DIR)/include -DUSE_BOEHM_GC -DGC_OPERATOR_NEW_ARRAY -DGC_NOT_DLL -DMONA_GC_DEBUG
+GC_CFLAGS     = $(BOEHM_GC_CFLAGS) -DMONASH_DONT_FREE_MEMORY -I $(BOEHM_GC_DIR)/include -DUSE_BOEHM_GC -DGC_OPERATOR_NEW_ARRAY -DGC_NOT_DLL #-DMONA_GC_DEBUG
 
 GC_CXX_SOURCES = $(BOEHM_GC_DIR)/gc_cpp.cpp
 GC_C_SOURCES   = $(BOEHM_GC_DIR)/alloc.c \
