--- a/mona/core/scheme/test/shell.scm.in
+++ b/mona/core/scheme/test/shell.scm.in
@@ -1,11 +1,11 @@
 (assert-check-equal
  string=?
- '((call-process-out-string "/APPS/TEST.APP/TEST.EX5 TEST-STRING") "TEST-STRING")
+ ((call-process-out-string "/APPS/TEST.APP/TEST.EX5 TEST-STRING") "TEST-STRING")
 )
 
 (assert-check-equal
  =
- '(-2 status)
- '(0 (call-process "/APPS/TEST.APP/TEST.EX5"))
- '(0 status)
+ (-2 status)
+ (0 (call-process "/APPS/TEST.APP/TEST.EX5"))
+ (0 status)
  )
