fixed compile error

--- a/mona/core/scheme/Makefile.mona
+++ b/mona/core/scheme/Makefile.mona
@@ -12,7 +12,7 @@ TARGET_LIBS = lib/interact.scm lib/batch.scm lib/danny.scm lib/unittest.scm lib/
 TEST_FILES  = test/char.scm test/closure.scm test/cont.scm test/generate.scm \
               test/number.scm test/pair.scm test/port.scm test/string.scm test/symbol.scm \
               test/test.scm test/util.scm test/vector.scm test/dir.scm test/shell.scm test/regexp.scm
-ADDCFLAGS    = $(GC_CFLAGS) -O3
+ADDCFLAGS    = $(GC_CFLAGS) -UCYGWIN32 -U__CYGWIN32__ -O3
 CLEANFILES   = $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(ONIG_OBJECTS) $(REGISTERS_INC) $(PROCEDURES_H) main.o $(TARGET_LIBS) test/test.scm test/dir.scm test/port.scm
 ADDINCLUDE   = -I $(MONADIR)/include/monalibc -I . -I ./onig/onig-5.7.0
 ADDLINK      =  main.o $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(ONIG_OBJECTS) -lmonalibc-imp --enable-auto-import #-lgui-imp
