--- a/contrib/Multimedia/audio_server_hige/happy/Makefile
+++ b/contrib/Multimedia/audio_server_hige/happy/Makefile
@@ -25,7 +25,7 @@ $(TREMOR_DIR)/window.c
 TREMOR_OBJECTS = $(TREMOR_SOURCES:.c=.o) _divdi3.o
 
 INSTDIR = $(BINDIR)/APPS/
-INSTFILES = A.OGG
+INSTFILES = A.OGG B.OGG
 CLEANFILES = $(TREMOR_SOURCES:.c=.o)
 $(TARGET).EX5: $(INSTFILES)
 
