--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -277,7 +277,13 @@
   (call-process "/APPS/ACLI.EX5"))
 
 (define (hp)
-  (call-process "/APPS/HAPPY.EX5 /APPS/A.OGG /APPS/A.OGG"))
+  (call-process "/APPS/HAPPY.EX5 /APPS/C.OGG /APPS/A.OGG"))
+
+(define (hp)
+  (call-process "/APPS/HAPPY.EX5 -d /APPS"))
+
+(define (bp)
+  (call-process "/APPS/BAYGUI/BPLAYER.APP/BPLAYER.EX5"))
 
 
 (define (wget)
