--- a/contrib/Multimedia/audio_server_hige/happy/Makefile
+++ b/contrib/Multimedia/audio_server_hige/happy/Makefile
@@ -24,7 +24,7 @@ $(TREMOR_DIR)/vorbisfile.c      \
 $(TREMOR_DIR)/window.c
 TREMOR_OBJECTS = $(TREMOR_SOURCES:.c=.o) _divdi3.o
 
-INSTDIR = $(BINDIR)/MUSIC/
+INSTDIR = $(BINDIR)/MUSIC
 INSTFILES = A.OGG #C.OGG D.OGG
 CLEANFILES = $(TREMOR_SOURCES:.c=.o)
 $(TARGET).EX5: $(INSTFILES)
