--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -280,10 +280,10 @@
   (call-process "/MUSIC/HAPPY.EX5 /APPS/C.OGG /APPS/A.OGG"))
 
 (define (hp)
-  (call-process "/MUSIC/HAPPY.EX5 -d /MUSIC"))
+  (start-process "/MUSIC/HAPPY.EX5 -d /MUSIC"))
 
 (define (bp)
-  (call-process "/APPS/BAYGUI/BPLAYER.APP/BPLAYER.EX5"))
+  (start-process "/APPS/BAYGUI/BPLAYER.APP/BPLAYER.EX5"))
 
 
 (define (wget)
