--- a/mona/core/scheme/lib/interact.scm.in
+++ b/mona/core/scheme/lib/interact.scm.in
@@ -19,3 +19,27 @@
   (set! *fs-initialized?* #t)
 )
 
+(define (a)
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+(fs-io-enum-directory-entries "/")
+)
