--- a/contrib/Gui/libgui/MONAFRMS.INI
+++ b/contrib/Gui/libgui/MONAFRMS.INI
@@ -2,6 +2,7 @@
 Run=/APPS/MONAFRMS/MONAFILE.APP/MONAFILE.EX5,/APPS/MONAFRMS/MSHELL.EX5,/APPS/BAYGUI/BPLAYER.APP
 
 [Wallpaper]
+rem Source=/APPS/MONAFUN.BMP
 Source=/APPS/MONAFUN.JPG
 
 rem 0: stretch screen
