--- a/contrib/Gui/libgui/Makefile
+++ b/contrib/Gui/libgui/Makefile
@@ -96,6 +96,7 @@ endif
 	$(INSTALL) -p MONAFRMS.MSH $(BINDIR)/APPS
 	$(INSTALL) -p MONAFRMS.INI $(BINDIR)/APPS
 	$(INSTALL) -p MONAFUN.JPG $(BINDIR)/APPS
+	$(INSTALL) -p MONAFUN.BMP $(BINDIR)/APPS
 
 uninstall:
 	rm -f $(LIBDIR)/$(LIB_STATIC)
