build with gosh becomes optional

--- a/mona/core/scheme/Makefile.dep.inc
+++ b/mona/core/scheme/Makefile.dep.inc
@@ -4,11 +4,13 @@ libcont/cont.o: libcont/cont.c
 libcont/mysetjmp_asm.o: libcont/mysetjmp.asm
 	nasm -I . -I ./libcont $(NFLAGS) $< -o $@
 
+ifdef GOSH
 $(REGISTERS_INC): $(PROCEDURE_SOURCES) ./test/generate.scm
-	gosh ./test/generate.scm --register $(PROCEDURE_SOURCES) > $@
+	$(GOSH) ./test/generate.scm --register $(PROCEDURE_SOURCES) > $@
 
 $(PROCEDURES_H): $(PROCEDURE_SOURCES) ./test/generate.scm
-	gosh ./test/generate.scm --header $(PROCEDURE_SOURCES) > $@
+	$(GOSH) ./test/generate.scm --header $(PROCEDURE_SOURCES) > $@
+endif
 
 main.o: main.cpp
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
