--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -56,6 +56,7 @@ all:
 	cd Sysutils/gclock && $(MAKE) && $(MAKE) install
 	cd Sysutils/gtimer && $(MAKE) && $(MAKE) install
 	cd Sysutils/startx && $(MAKE) && $(MAKE) install
+	cd Devel/gcc && $(MAKE) && $(MAKE) install
 ### $(MAKE) disk images
 	cd $(MONADIR)/tool/mkimg && $(MAKE)
 
@@ -102,5 +103,6 @@ clean:
 	cd Sysutils/gtimer && $(MAKE) clean
 	cd Sysutils/startx && $(MAKE) clean
 
+	cd Devel/gcc && $(MAKE) clean
 depend:
 	cd Multimedia/audio_server/happy && $(MAKE) depend
