--- a/mona/Makefile
+++ b/mona/Makefile
@@ -39,11 +39,11 @@ endif
 	cd core/elf_server && $(MAKE) && $(MAKE) install
 	cd core/pe_server && $(MAKE) && $(MAKE) install
 	cd core/gui_server && $(MAKE) && $(MAKE) install
-	cd core/test && $(MAKE) && $(MAKE) install
 	cd core/scheme && $(MAKE) -f Makefile.mona && $(MAKE) -f Makefile.mona install
 
 tests: tools cores
 	cd test/monalibc/string && $(MAKE) && $(MAKE) install
+	cd test/monalibc/stdio && $(MAKE) && $(MAKE) install
 
 mkimg: cores externals tools tests
 	cd tool/mkimg && $(MAKE) clean && $(MAKE)
@@ -62,8 +62,8 @@ depend: clean
 	cd core/elf_server && $(MAKE) $@&
 	cd core/pe_server && $(MAKE) $@
 	cd core/gui_server && $(MAKE) $@
-	cd core/test && $(MAKE) $@
 	cd test/monalibc/string && $(MAKE) $@
+	cd test/monalibc/stdio && $(MAKE) $@
 
 .PHONY: clean
 clean:
@@ -87,6 +87,6 @@ endif
 	$(MAKE) $@ -C core/elf_server
 	$(MAKE) $@ -C core/pe_server
 	$(MAKE) $@ -C core/gui_server
-	$(MAKE) $@ -C core/test
 	$(MAKE) $@ -C core/scheme -f Makefile.mona
-	$(MAKE) $@ -C test/monalibc/string
+	cd test/monalibc/string && make clean
+	cd test/monalibc/stdio && make clean
