--- a/mona/tool/mkimg/MONITOR.CFG
+++ b/mona/tool/mkimg/MONITOR.CFG
@@ -8,6 +8,6 @@ SERVER=/SERVERS/MOUSE.EX5
 SERVER=/SERVERS/SCREEN.EX5
 #SERVER=/SERVERS/GUI.EX5
 #SERVER=/SERVERS/NET.EX5
-#SERVER=/APPS/UIP.EX5
+SERVER=/APPS/UIP.EX5
 SERVER=/SERVERS/SCHEME.EX5
 #SERVER=/SERVERS/SHELL.EX5
